2009-09-18  Warwick Allison  <warwick.allison@nokia.com>

        Reviewed by Simon Hausmann.

        Added a test that console output works.

        * tests/qwebpage/tst_qwebpage.cpp:
        (ConsolePage::ConsolePage):
        (ConsolePage::javaScriptConsoleMessage):
        (tst_QWebPage::consoleOutput):

2009-09-17  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Improve documentation for Page Cache.

        * Api/qwebsettings.cpp:

2009-09-17  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Update QWebSettings::setUserStyleSheetUrl() docs and test

        https://bugs.webkit.org/show_bug.cgi?id=29081

        The documentation now specifies that the URL has to be a local file
        or a a data-URL (with utf-8 and base64-encoded data), as these are the
        only two schemes that the current code path accepts.

        The auto-test has been updated to reflect this limitation.

        At a later point we should concider adding API for the new way of
        doing both user defined stylesheets and scripts.

        * Api/qwebsettings.cpp:
        * tests/qwebpage/tst_qwebpage.cpp:

2009-09-17  Janne Koskinen  <janne.p.koskinen@digia.com>

        Reviewed by Simon Hausmann.

        Symbian build fix.

        Moved the #ifdefs around _q_cleanupLeakMessages() into the function
        definition.

        QMake is not being able to distinguish between release and debug builds
        in Symbian build. This is a Symbian toolchain issue.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::_q_cleanupLeakMessages):
        * Api/qwebpage.h:
        * Api/qwebpage_p.h:

2009-09-17  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Simon Hausmann.

        Small cosmetic documentation fixlet in the QWebInspector.

        * Api/qwebinspector.cpp:

2009-09-16  Benjamin C Meyer  <benjamin.meyer@torchmobile.com>

        Reviewed by Eric Seidel.
