@@ -202,8 +202,9 @@ QList<QWebDatabase> QWebSecurityOrigin::databases() const
 
 /*!
     \since 4.6
-    Allow applications to use a custome scheme instead of file: scheme,
-    without being subjected to cross domain restrictions.
+
+    Adds the given \a scheme to the list of schemes that are considered equivalent
+    to the \c file: scheme. They are not subject to cross domain restrictions.
 */
 void QWebSecurityOrigin::addLocalScheme(const QString& scheme)
 {
@@ -212,8 +213,10 @@ void QWebSecurityOrigin::addLocalScheme(const QString& scheme)
 
 /*!
     \since 4.6
-    Allow applications to stop using a custome scheme that was previously used,
-    \sa addLocalScheme().
+
+    Removes the given \a scheme from the list of local schemes.
+
+    \sa addLocalScheme()
 */
 void QWebSecurityOrigin::removeLocalScheme(const QString& scheme)
 {
@@ -223,7 +226,7 @@ void QWebSecurityOrigin::removeLocalScheme(const QString& scheme)
 /*!
     \since 4.6
     Returns a list of all the schemes that were set by the application as local schemes,
-    \sa addLocalScheme(), removeLocalScheme().
+    \sa addLocalScheme(), removeLocalScheme()
 */
 QStringList QWebSecurityOrigin::localSchemes()
 {
@@ -237,11 +240,19 @@ QStringList QWebSecurityOrigin::localSchemes()
     return list;
 }
 
+/*!
+    \since 4.6
+    \internal
+*/
 void QWebSecurityOrigin::whiteListAccessFromOrigin(const QString& sourceOrigin, const QString& destinationProtocol, const QString& destinationHost, bool allowDestinationSubdomains)
 {
     SecurityOrigin::whiteListAccessFromOrigin(*SecurityOrigin::createFromString(sourceOrigin), destinationProtocol, destinationHost, allowDestinationSubdomains);
 }
 
+/*!
+    \since 4.6
+    \internal
+*/
 void QWebSecurityOrigin::resetOriginAccessWhiteLists()
 {
     SecurityOrigin::resetOriginAccessWhiteLists();
